Change images size

--- a/recipes/milanesas.html
+++ b/recipes/milanesas.html
@@ -6,5 +6,24 @@
     </head>
     <body>
         <h1>Argentine milanesa recipe</h1>
+        <img src="/img/milanesas.jpg" alt="A picture of three milanesas on a white plate" height="auto" width="300px">
+        <h2>A classic dish that you must try</h2>
+        <h3>Ingredients</h3>
+            <ul>
+                <li>1 kg of beef (rump, silverside, cuadrada or flank steak)</li>
+                <li>4 eggs</li>
+                <li>2 cloves of garlic</li>
+                <li>Chopped parsley</li>
+                <li>Salt and pepper to taste</li>
+                <li>1 teaspoon of mustard</li>
+                <li>Breadcrumbs</li>
+            </ul>
+        <h3>Steps</h3>
+            <ol>
+                <li>Chop the garlic and parsley, mix with the mustard.</li>
+                <li>Beat the eggs and season with the above mix, salt and pepper.</li>
+                <li>Let the meat sit in the eggs for a few minutes. Strain the milanesas and dip into the breadcrumbs.</li>
+                <li>Fry in a pan with plenty of oil until golden, then withdraw and dry on absorbent paper before serving.</li>
+            </ol>
     </body>
 </html>
