Add relative links of new recipes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/milanesas.html">Argentine milanesa recipe</a>
+        <ul>
+            <li><a href="recipes/milanesas.html">Argentine milanesa recipe</a></li>
+            <li><a href="recipes/chocotorta.html">Chocotorta recipe</a></li>
+            <li><a href="recipes/alfajorcitos.html">"Alfajorcitos" recipe</a></li>
+        </ul>
+
+
     </body>
 </html>
